--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="carousel-item active">
               <img
                 src="images/cover/cover-1.png"
-                class="d-block w-100"
+                class="d-block w-100 img-bg"
                 alt="..."
               />
               <div
@@ -113,7 +113,7 @@
             <div class="carousel-item">
               <img
                 src="images/cover/cover-2.jpg"
-                class="d-block w-100"
+                class="d-block w-100 img-bg"
                 alt="..."
               />
               <div
@@ -133,8 +133,8 @@
             </div>
             <div class="carousel-item">
               <img
-                src="images/cover/cover-3.jpg"
-                class="d-block w-100"
+                src="images/cover/cover-3.jpg "
+                class="d-block w-100 img-bg"
                 alt="..."
               />
               <div
@@ -175,6 +175,22 @@
       </section>
     </header>
     <!-- header end -->
+    <!-- discover section  -->
+    <main class="container">
+      <section class="text-center mt-5">
+        <div class="">
+          <h1>
+            Discover Our Popular <br />
+            Courses
+          </h1>
+          <p>
+            t is a long established fact that a reader will be distracted by the
+            readable <br />
+            content of a page when looking at its layout.
+          </p>
+        </div>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
