--- a/index.html
+++ b/index.html
@@ -175,19 +175,104 @@
       </section>
     </header>
     <!-- header end -->
-    <!-- discover section  -->
     <main class="container">
-      <section class="text-center mt-5">
+      <!-- discover section  -->
+      <section class="text-center mt-5 mb-5">
         <div class="">
           <h1>
             Discover Our Popular <br />
             Courses
           </h1>
-          <p>
-            t is a long established fact that a reader will be distracted by the
-            readable <br />
+          <p class="text-secondary">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
             content of a page when looking at its layout.
           </p>
+        </div>
+      </section>
+      <!-- courses card  -->
+      <section>
+        <div class="container text-center">
+          <div class="row g-4">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class="border bg-light d-flex rounded">
+                <img class="w-50" src="images/course/course-1.png" alt="" />
+                <div class="p-3">
+                  <h5>Fundamental Of UI/UX Design</h5>
+                  <p class="text-secondary">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="text-info fw-bold">Price : 20$</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="border bg-light d-flex rounded">
+                <img class="w-50" src="images/course/course-2.png" alt="" />
+                <div class="p-3">
+                  <h5>Javascript Basic to advanced</h5>
+                  <p class="text-secondary">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="text-info fw-bold">Price : 20$</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="border bg-light d-flex rounded">
+                <img class="w-50" src="images/course/course-3.png" alt="" />
+                <div class="p-3">
+                  <h5>Fullstack Web Development</h5>
+                  <p class="text-secondary">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="text-info fw-bold">Price : 20$</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="border bg-light d-flex rounded">
+                <img class="w-50" src="images/course/course-4.png" alt="" />
+                <div class="p-3">
+                  <h5>Digital Marketing</h5>
+                  <p class="text-secondary">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="text-info fw-bold">Price : 20$</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="border bg-light d-flex rounded">
+                <img class="w-50" src="images/course/course-5.png" alt="" />
+                <div class="p-3">
+                  <h5>Photography Basic Rules</h5>
+                  <p class="text-secondary">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="text-info fw-bold">Price : 20$</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="border bg-light d-flex rounded">
+                <img class="w-50" src="images/course/course-6.png" alt="" />
+                <div class="p-3">
+                  <h5>Motion Graphics</h5>
+                  <p class="text-secondary">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="text-info fw-bold">Price : 20$</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
