--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <header>
       <section class="container">
         <!-- navigation  -->
-        <nav class="navbar sticky-top navbar-expand-lg mb-5">
+        <nav class="navbar navbar-expand-lg mb-5">
           <div class="container">
-            <a class="navbar-brand text-primary" href="#">Learn Programming</a>
+            <a class="navbar-brand text-info fw-semibold fs-3" href="#"
+              >Learn Programming</a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -54,7 +56,10 @@
                   <a class="nav-link" href="#">Contact us</a>
                 </li>
               </ul>
-              <button type="button" class="btn btn-outline-info px-4">
+              <button
+                type="button"
+                class="btn btn-outline-info text-info fw-semibold bg-white px-4 py-2"
+              >
                 Register
               </button>
             </div>
@@ -193,7 +198,7 @@
       <!-- courses card  -->
       <section>
         <div class="container text-center">
-          <div class="row g-4">
+          <div class="row g-4 mb-5">
             <div class="col-lg-6 col-md-12 col-sm-12">
               <div class="border bg-light d-flex rounded">
                 <img class="w-50" src="images/course/course-1.png" alt="" />
@@ -271,6 +276,93 @@
                   <p class="text-info fw-bold">Price : 20$</p>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="btn text-white fw-semibold bg-info px-4 py-2">
+            View All
+          </div>
+        </div>
+        <!-- model section  -->
+
+        <div>
+          <div
+            class="model-bg d-lg-flex align-items-center justify-content-around mt-5 mb-5"
+          >
+            <div class="w-50 text-white">
+              <h1>Ready to join?</h1>
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+            </div>
+            <div>
+              <div
+                class="btn text-info fw-semibold bg-light px-4 py-2"
+                data-bs-toggle="modal"
+                data-bs-target="#mymodal"
+              >
+                Register Now
+              </div>
+              <!-- modal start -->
+              <div class="modal" id="mymodal">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header bg-info text-white">
+                      <h5 class="modal-title">Register Now</h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <form action="">
+                        <div class="mb-3">
+                          <label class="form-label">Full Name:</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Full Name"
+                          />
+                        </div>
+                        <div class="mb-3">
+                          <label class="form-label">User Name:</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            placeholder="User Name"
+                          />
+                        </div>
+                        <div class="mb-3">
+                          <label class="form-label">Email:</label>
+                          <input
+                            type="email"
+                            class="form-control"
+                            placeholder="Email"
+                          />
+                        </div>
+                        <div class="mb-3">
+                          <label class="form-label">Password:</label>
+                          <input
+                            type="password"
+                            class="form-control"
+                            placeholder="Password"
+                          />
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="submit" class="btn btn-primary">
+                        Submit
+                      </button>
+
+                      <button type="close" class="btn btn-danger">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- modal end -->
             </div>
           </div>
         </div>
