--- a/index.html
+++ b/index.html
@@ -367,6 +367,132 @@
           </div>
         </div>
       </section>
+      <!-- Frequently Asked Questions -->
+      <section class="text-center mt-5 mb-5">
+        <div class="">
+          <h1>Frequently Asked Questions</h1>
+          <p class="text-secondary">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
+          </p>
+        </div>
+      </section>
+      <!-- accordion section  -->
+      <section>
+        <div class="accordion mx-auto w-50 mb-5" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button
+                class="accordion-button text-dark fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseOne"
+                aria-expanded="true"
+                aria-controls="collapseOne"
+              >
+                What is difference between Flex and Flexbox?
+              </button>
+            </h2>
+            <div
+              id="collapseOne"
+              class="accordion-collapse collapse show"
+              aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                Flexbox allows fine-tuning of alignments to ensure exact
+                specification sharing. Flex Direction allows developers to align
+                elements vertically or horizontally, which is used when
+                developers create and reverse rows or columns.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button
+                class="accordion-button collapsed text-dark fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo"
+                aria-expanded="false"
+                aria-controls="collapseTwo"
+              >
+                bootstrap difference tailwind
+              </button>
+            </h2>
+            <div
+              id="collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingTwo"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                Bootstrap comes with a set of pre-styled responsive,
+                mobile-first components that possess a definite UI kit. Tailwind
+                CSS uses a set of utility classes to create a neat UI with more
+                flexibility and uniqueness. Sites created using Bootstrap follow
+                the generic pattern that makes them look identical.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed text-dark fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                What is an HTML semantic tag?
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingThree"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                Semantic HTML is the use of HTML markup to reinforce the
+                semantics, or meaning, of the information in web pages and web
+                applications rather than merely to define its presentation or
+                look. Semantic HTML is processed by traditional web browsers as
+                well as by many other user agents.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed text-dark fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                What is CSS box model
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingThree"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                In web development, the CSS box model refers to how HTML
+                elements are modeled in browser engines and how the dimensions
+                of those HTML elements are derived from CSS properties. It is a
+                fundamental concept for the composition of HTML webpages.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
