--- a/index.html
+++ b/index.html
@@ -493,7 +493,19 @@
           </div>
         </div>
       </section>
+      <section>
+        <h1 class="text-center mb-4">Trusted by over 800+ companies</h1>
+        <div class="d-flex justify-content-between align-items-center mb-5">
+          <img class="h-100" src="images/company/company-1.png" alt="" />
+          <img src="images/company/company-2.png" alt="" />
+          <img src="images/company/company-3.png" alt="" />
+          <img src="images/company/company-4.png" alt="" />
+          <img src="images/company/company-5.png" alt="" />
+          <img src="images/company/company-6.png" alt="" />
+        </div>
+      </section>
     </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
