--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/d0b6aa1cca.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header start -->
@@ -381,7 +385,7 @@
       <!-- accordion section  -->
       <section>
         <div class="accordion mx-auto w-50 mb-5" id="accordionExample">
-          <div class="accordion-item">
+          <div class="accordion-item mb-4">
             <h2 class="accordion-header" id="headingOne">
               <button
                 class="accordion-button text-dark fw-bold"
@@ -408,7 +412,7 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item mb-4">
             <h2 class="accordion-header" id="headingTwo">
               <button
                 class="accordion-button collapsed text-dark fw-bold"
@@ -436,7 +440,7 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item mb-4">
             <h2 class="accordion-header" id="headingThree">
               <button
                 class="accordion-button collapsed text-dark fw-bold"
@@ -464,7 +468,7 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item mb-4">
             <h2 class="accordion-header" id="headingThree">
               <button
                 class="accordion-button collapsed text-dark fw-bold"
@@ -494,7 +498,7 @@
         </div>
       </section>
       <section>
-        <h1 class="text-center mb-4">Trusted by over 800+ companies</h1>
+        <h2 class="text-center mb-4 fw-bold">Trusted by over 800+ companies</h2>
         <div class="d-flex justify-content-between align-items-center mb-5">
           <img class="h-100" src="images/company/company-1.png" alt="" />
           <img src="images/company/company-2.png" alt="" />
@@ -505,7 +509,35 @@
         </div>
       </section>
     </main>
-
+    <!-- footer  -->
+    <footer>
+      <div
+        class="text-center footer d-flex flex-column justify-content-center align-items-center"
+      >
+        <h4 class="text-white">Learn Programming</h4>
+        <p>
+          Office 41, Zawaya Buildin, Ghala Muscat, <br />
+          Sultanate of Oman
+        </p>
+        <small>Privacy Ploicy | Terms of use</small>
+        <div>
+          <ul class="socials">
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
