--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   >
                 </li>
                 <li class="nav-item px-2">
-                  <a class="nav-link" href="#">Courses</a>
+                  <a class="nav-link" href="#courses">Courses</a>
                 </li>
                 <li class="nav-item px-2">
                   <a class="nav-link" href="#">Success</a>
@@ -54,10 +54,10 @@
                   <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item px-2">
-                  <a class="nav-link" href="#">Register</a>
+                  <a class="nav-link" href="#register">Register</a>
                 </li>
                 <li class="nav-item px-2">
-                  <a class="nav-link" href="#">Contact us</a>
+                  <a class="nav-link" href="#contact-us">Contact us</a>
                 </li>
               </ul>
               <button
@@ -116,7 +116,11 @@
                   by the <br />
                   readable content of a page when looking at its layout.
                 </p>
-                <div class="btn btn-warning">Get Started</div>
+                <div
+                  class="btn btn-outline-info bg-info fw-semibold text-white px-4 py-2"
+                >
+                  Get Started
+                </div>
               </div>
             </div>
             <div class="carousel-item">
@@ -137,7 +141,11 @@
                   by the <br />
                   readable content of a page when looking at its layout.
                 </p>
-                <div class="btn btn-warning">Get Started</div>
+                <div
+                  class="btn btn-outline-info bg-info fw-semibold text-white px-4 py-2"
+                >
+                  Get Started
+                </div>
               </div>
             </div>
             <div class="carousel-item">
@@ -158,7 +166,11 @@
                   by the <br />
                   readable content of a page when looking at its layout.
                 </p>
-                <div class="btn btn-warning">Get Started</div>
+                <div
+                  class="btn btn-outline-info bg-info fw-semibold text-white px-4 py-2"
+                >
+                  Get Started
+                </div>
               </div>
             </div>
           </div>
@@ -202,7 +214,7 @@
       <!-- courses card  -->
       <section>
         <div class="container text-center">
-          <div class="row g-4 mb-5">
+          <div class="row g-4 mb-5" id="courses">
             <div class="col-lg-6 col-md-12 col-sm-12">
               <div class="border bg-light d-flex rounded">
                 <img class="w-50" src="images/course/course-1.png" alt="" />
@@ -291,6 +303,7 @@
         <div>
           <div
             class="model-bg d-lg-flex align-items-center justify-content-around mt-5 mb-5"
+            id="register"
           >
             <div class="w-50 text-white">
               <h1>Ready to join?</h1>
@@ -513,6 +526,7 @@
     <footer>
       <div
         class="text-center footer d-flex flex-column justify-content-center align-items-center"
+        id="contact-us"
       >
         <h4 class="text-white">Learn Programming</h4>
         <p>
